--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "install:all": "npm --prefix server install && npm --prefix client install"
   },
   "devDependencies": {
-    "concurrently": "^9.0.1"
+    "concurrently": "^9.0.1",
+    "vite": "^7.3.0"
   }
 }
